[gd_scene load_steps=10 format=3 uid="uid://c3kn7ul5x3fw4"]

[ext_resource type="Script" uid="uid://dq4laa7qd4ooy" path="res://prefabs/units/scripts/unit.gd" id="1_pnrs7"]
[ext_resource type="Texture2D" uid="uid://n37ctvb73mhy" path="res://sprites/units/wolf_units/wolf1.png" id="2_hvvqh"]

[sub_resource type="CircleShape2D" id="CircleShape2D_lf63s"]
radius = 100.0

[sub_resource type="SystemFont" id="SystemFont_6e3tn"]
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_cx6aj"]
font = SubResource("SystemFont_6e3tn")
font_size = 20
outline_size = 3
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_hvvqh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UnitSprite:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("UnitSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_pnrs7"]
resource_name = "unit_attack"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UnitSprite:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.06666667, 0.13333334, 0.2, 0.26666668, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.5235987755982988, -0.5235987755982988, 0.5235987755982988, 0.5235987755982988, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("UnitSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.13333334, 0.2, 0.2667, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0), Vector2(30, 0), Vector2(30, 0), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hvvqh"]
_data = {
&"RESET": SubResource("Animation_hvvqh"),
&"unit_attack": SubResource("Animation_pnrs7")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pnrs7"]
bg_color = Color(0.4891132, 0.019222802, 0.019221738, 1)

[node name="Unit" type="Area2D" node_paths=PackedStringArray("sprite", "attack_animator", "hp_bar")]
z_index = 90
scale = Vector2(0.95, 0.95)
collision_layer = 24
collision_mask = 48
script = ExtResource("1_pnrs7")
sprite = NodePath("UnitSprite")
attack_animator = NodePath("AttackAnim")
hp_bar = NodePath("HpBar")

[node name="UnitCollision" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_lf63s")

[node name="UnitSprite" type="Sprite2D" parent="."]
scale = Vector2(1.9, 1.9)
texture = ExtResource("2_hvvqh")

[node name="hp_text" type="Label" parent="."]
visible = false
z_index = 10
offset_left = -18.947
offset_top = -30.0
offset_right = 29.053003
offset_bottom = 20.000004
text = "hp: 0"
label_settings = SubResource("LabelSettings_cx6aj")

[node name="move_text" type="Label" parent="."]
visible = false
z_index = 10
offset_left = -40.00037
offset_top = -9.473684
offset_right = 50.99963
offset_bottom = 40.526314
text = "move: 0"
label_settings = SubResource("LabelSettings_cx6aj")

[node name="damage_text" type="Label" parent="."]
visible = false
z_index = 10
offset_left = -49.473686
offset_top = 10.526316
offset_right = 70.52631
offset_bottom = 60.526314
text = "damage: 0"
label_settings = SubResource("LabelSettings_cx6aj")

[node name="atk_speed_text" type="Label" parent="."]
visible = false
z_index = 10
offset_left = -45.263157
offset_top = 31.578949
offset_right = 51.736843
offset_bottom = 81.57895
text = "atk_spd: 0"
label_settings = SubResource("LabelSettings_cx6aj")

[node name="AttackAnim" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_hvvqh")
}

[node name="HpBar" type="ProgressBar" parent="."]
offset_left = -95.0
offset_top = 84.0
offset_right = 95.0
offset_bottom = 91.0
theme_override_styles/fill = SubResource("StyleBoxFlat_pnrs7")
show_percentage = false
